--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                   </div>
                   <div class="info-item">
                     <span class="info-label">Email:</span>
-                    <span class="info-value">contact@rafayadeel.com</span>
+                    <span class="info-value">rafayadeel1999@gmail</span>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="info-item">
                     <span class="info-label">Location:</span>
-                    <span class="info-value">New York, USA</span>
+                    <span class="info-value"> Faisalabad, PB, Pakistan </span>
                   </div>
                   <div class="info-item">
                     <span class="info-label">Availability:</span>
