--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                         technologies and a drive to improve my skills every day.
                     </p>
                     <p>
-                        Beyond coding, I enjoy collaborating in teams, taking on leadership roles, and contributing to
+                        Beyond coding, I enjoy collaborating in teams, taking on leadership and managerial roles, and contributing to
                         impactful initiatives
-                        like TEDxFAST Faisalabad and VANAR. I'm currently looking for opportunities to gain hands-on
+                        like TEDxFAST Faisalabad and Daira FAST. I'm currently looking for opportunities to gain hands-on
                         experience, work with talented teams,
                         and make a positive contribution to the tech world.
                     </p>
@@ -183,7 +183,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon"><i class="fas fa-laptop-code"></i></div>
-                            <span>Visual Studio</span>
+                            <span>Visual Studio Code</span>
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon"><i class="far fa-file-word"></i></div>
