--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon"><i class="fas fa-laptop-code"></i></div>
-                            <span>Visual Studio Code</span>
+                            <span>VS Code</span>
                         </div>
                         <div class="skill-item">
                             <div class="skill-icon"><i class="far fa-file-word"></i></div>
