--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                     </h1>
                     <h2 class="subtitle">I am a <span id="animated-subtitle"></span></h2>
                     <p class="description">
-                        An ambitious student currently pursuing a bachelor's in Computer Science from FAST NUCES,
-                        skilled in problem-solving and analytical thinking.
+                        Computer Science Engineer | Crafting Intelligent Systems & Secure Software Solutions
                     </p>
                     <div class="cta-buttons">
                         <a href="#projects" class="btn primary-btn">View Projects</a>
@@ -102,9 +101,8 @@
                 <div class="about-text">
                     <h3 class="about-subtitle">Who am I?</h3>
                     <p>
-                        Hi! I'm Rafay Adeel — a passionate Computer Science student at FAST NUCES with a strong
-                        foundation
-                        in problem-solving, analytical thinking, and software development.
+                        Hi! I'm Rafay Adeel, an aspiring final-year Computer Scientist student at FAST NUCES, driven by a strong foundation in problem-solving, analytical thinking, and software development. 
+                        I'm actively seeking opportunities to apply my skills, collaborate with innovative teams, and make a lasting impact in the tech industry
                     </p>
                     <p>
                         I love building meaningful projects that solve real-world problems, whether it's developing web
@@ -115,8 +113,7 @@
                     </p>
                     <p>
                         Beyond coding, I enjoy collaborating in teams, taking on leadership as well as managerial roles, and contributing to
-                        impactful initiatives like TEDxFAST Faisalabad and DAIRA FAST. I'm currently looking for opportunities to gain hands-on
-                        experience, work with talented teams, and make a positive contribution to the tech world.
+                        impactful initiatives like TEDxFAST Faisalabad and DAIRA FAST.
                     </p>
                     <div class="social-links">
                         <a href="https://linkedin.com/in/rafay-adeel" target="_blank" class="social-icon"
