--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </h1>
                     <h2 class="subtitle">I am a <span id="animated-subtitle"></span></h2>
                     <p class="description">
-                        Computer Science Engineer | Crafting Intelligent Systems & Secure Software Solutions
+                        Computer Science Engineer | Crafting Intelligent Systems & Secure Software Solutions to Drive Innovation
                     </p>
                     <div class="cta-buttons">
                         <a href="#projects" class="btn primary-btn">View Projects</a>
